新增整合redis,shiro,mybatis,邮件服务，定时任务的demo

--- a/springboot-web/src/main/resources/application.yaml
+++ b/springboot-web/src/main/resources/application.yaml
@@ -10,9 +10,18 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/ssm?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/ssm?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 
-#  Redis配置
+#   JPA配置
+  jpa:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: create
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: false
+
+  #  Redis配置
   redis:
     database: 0
     host: localhost
@@ -24,3 +33,37 @@ spring:
         max-wait: 1
         max-idle: 8
         min-idle: 0
+
+  thymeleaf:
+    prefix: classpath:/templates/
+    check-template-location: true
+    suffix: .html
+    servlet:
+      content-type: text/html
+    mode: HTML
+    cache: false
+    encoding: UTF-8
+  mail:
+    host: smtp.qq.com
+    username: 841299007@qq.com
+    password: beiifclzjbsnbdda
+    default-encoding: UTF-8
+
+mail:
+  fromMail:
+    addr: 841299007@qq.com
+
+
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+
+logging:
+  config: springboot-web/src/main/resources/logback.xml
+  level:
+    com.kw.mapper: trace
+
+
+
